--- a/CSS practice/index.html
+++ b/CSS practice/index.html
@@ -7,25 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="heading">This is heading</h1>
-    <p id="paragraph">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
-      mollitia, quis suscipit laborum blanditiis repudiandae minus odio corporis
-      deleniti, quae placeat? Nemo beatae, tempora saepe quidem perspiciatis
-      ratione architecto sint fugit ex illum consequuntur quas laudantium dolore
-      minus quo totam iure rem in praesentium quibusdam?
-    </p>
-    <div id="outer">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, libero
-      porro alias, blanditiis nisi, pariatur inventore qui rerum ab assumenda
-      incidunt molestiae earum repellendus necessitatibus quae in expedita
-      repudiandae temporibus!
-      <div id="inner">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        debitis possimus nesciunt natus voluptate eum modi suscipit quasi
-        ducimus autem, hic ipsum eveniet sit voluptatibus exercitationem quos in
-        ipsa labore?
-      </div>
+    <div class="navbar">
+      <a id="logo">amazon.in</a>
+      <a>Account</a>
+      <a>MyCart</a>
+      <a>Contact Us</a>
+      <input placeholder="search in Amazon" />
+      <button>Search</button>
     </div>
   </body>
 </html>
