level 2 of css completed
margin 2 div ya box k darmiyan k distance hota hai yeh top,left,right,bottom sb hota
padding: 1 div k andar element k distance hota hai yeh bhi sb hota hai
display: inline: content k braber jaga leta hai, block: poori jaga leta hai, inline-block: margin and padding set krskty haiin yeh same distance leta hai block or inline ka , none se elemeent gayab hojata hai

--- a/CSS practice/index.html
+++ b/CSS practice/index.html
@@ -6,14 +6,34 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
+  <header>
+    <div class="head">
+      <div class="container">Amazon.IN</div>
+      <div class="container">Account</div>
+      <div class="container">Mycart</div>
+      <div class="container">Contact Us</div>
+      <div>
+        <input placeholder="search" />
+        <button>Search</button>
+      </div>
+    </div>
+  </header>
   <body>
-    <div class="navbar">
-      <a id="logo">amazon.in</a>
-      <a>Account</a>
-      <a>MyCart</a>
-      <a>Contact Us</a>
-      <input placeholder="search in Amazon" />
-      <button>Search</button>
+    <div class="content">
+      <div class="contentitem" style="background-color: green">
+        This is div1, Buy your own shirts
+      </div>
+      <div class="contentitem" style="background-color: firebrick">
+        This is div2, buy your own phone
+      </div>
+      <div class="contentitem" style="background-color: blue">
+        This is div3,Testing version
+      </div>
     </div>
   </body>
+  <footer>
+    <p style="color: black">Made By Amazon</p>
+    <br />
+    <p>Being in the service since 1994</p>
+  </footer>
 </html>
